# raglet

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
examples/: README.md  hybrid_vs_dense.ipynb  local_only.ipynb  quickstart.ipynb
raglet/: __init__.py  chunking.py  cli.py  core.py  embeddings.py  eval.py  expansion.py  fusion.py  llm.py  loaders.py  memory.py  rerank.py  sparse.py  store.py  web_ui.py
tests/: sample_qa.json  test_advanced.py  test_chunking.py  test_cli.py  test_core.py  test_enhancements.py  test_fusion.py  test_loaders.py  test_sparse.py  test_store.py
tests/fixtures/: embeddings.txt  rag_intro.txt
